Added pure-html sequence diagrams

--- a/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
+++ b/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
@@ -291,7 +291,60 @@ View components & Events & Action \\
 \subsubsection{\texorpdfstring{\emph{Sequence
 Diagrams}}{Sequence Diagrams}}\label{sequence-diagrams}}
 
-TODO
+\hypertarget{evento-login}{%
+\paragraph{Evento Login}\label{evento-login}}
+
+\begin{figure}
+\centering
+\includegraphics{../../../../_resources/Event_Login.png}
+\caption{\emph{Sequence diagram dell'evento Login.}}
+\end{figure}
+
+\hypertarget{evento-gotohome}{%
+\paragraph{Evento GoToHome}\label{evento-gotohome}}
+
+\begin{figure}
+\centering
+\includegraphics{../../../../_resources/Event_GoToHome.png}
+\caption{\emph{Sequence diagram dell'evento GoToHome.}}
+\end{figure}
+
+\hypertarget{evento-createcategory}{%
+\paragraph{Evento CreateCategory}\label{evento-createcategory}}
+
+\begin{figure}
+\centering
+\includegraphics{../../../../_resources/Event_CreateCategory.png}
+\caption{\emph{Sequence diagram dell'evento CreateCategory.}}
+\end{figure}
+
+\hypertarget{evento-copycategory}{%
+\paragraph{Evento CopyCategory}\label{evento-copycategory}}
+
+\begin{figure}
+\centering
+\includegraphics{../../../../_resources/Event_CopyCategory.png}
+\caption{\emph{Sequence diagram dell'evento CopyCategory.}}
+\end{figure}
+
+\hypertarget{evento-insertcopiedcategory}{%
+\paragraph{Evento
+InsertCopiedCategory}\label{evento-insertcopiedcategory}}
+
+\begin{figure}
+\centering
+\includegraphics{../../../../_resources/Event_InsertCopiedCategory.png}
+\caption{\emph{Sequence diagram dell'evento InsertCopiedCategory.}}
+\end{figure}
+
+\hypertarget{evento-logout}{%
+\paragraph{Evento Logout}\label{evento-logout}}
+
+\begin{figure}
+\centering
+\includegraphics{../../../../_resources/Event_Logout.png}
+\caption{\emph{Sequence diagram dell'evento Logout.}}
+\end{figure}
 
 \hypertarget{rich-internet-application}{%
 \subsection{\texorpdfstring{\emph{Rich Internet
