Indentation and adjustments

--- a/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
+++ b/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
@@ -1,3 +1,5 @@
+\pagebreak
+
 \hypertarget{tecnologie-informatiche-per-il-web---documentazione-progetto}{%
 \section{Tecnologie Informatiche per il Web - Documentazione
 Progetto}\label{tecnologie-informatiche-per-il-web---documentazione-progetto}}
@@ -9,12 +11,16 @@ Documentazione relativa al progetto finale del corso
 ``\textbf{Tecnologie Informatiche per il Web}'', professore Fraternali
 Piero.
 
-Studenti De Ciechi Samuele e Deidier Simone, gruppo 9.
+Studenti \href{https://github.com/Samdec01}{De Ciechi Samuele} e
+\href{https://github.com/SimoneDeidier}{Deidier Simone}, gruppo 9.
 
 Questo file contiene la documentazione relativa sia al progetto
-\emph{Pure-HTML} sia al progetto \emph{Rich Iternet Application}.
+\emph{Pure-HTML} sia al progetto \emph{Rich Iternet
+Application}.\newline\newline\newline
 
 \emph{Anno Accademico 2022/2023}
+
+\pagebreak
 
 \hypertarget{pure-html}{%
 \subsection{\texorpdfstring{\emph{Pure-HTML}}{Pure-HTML}}\label{pure-html}}
@@ -55,6 +61,8 @@ qui}'' non associato a un nodo della tassonomia che permette di copiare
 un sotto-albero al primo livello della tassonomia (\emph{se non esistono
 già 9 nodi al primo livello della tassonomia}).
 
+\pagebreak
+
 \hypertarget{analisi-della-specifica}{%
 \subsubsection{Analisi della specifica}\label{analisi-della-specifica}}
 
@@ -78,15 +86,13 @@ appesa alla categoria padre come ultimo sottoelemento. Alla nuova
 categoria viene assegnato un \emph{codice numerico} che ne riflette la
 posizione\ldots{}
 
-\hypertarget{diagramma-er-relativo-al-database}{%
-\paragraph{Diagramma ER relativo al
-database}\label{diagramma-er-relativo-al-database}}
-
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Screenshot 2023-06-26 alle 23.25.59.png}
+\includegraphics{../../../../_resources/Screenshot 2023-06-26 alle 23.25.59-18.png}
 \caption{\emph{Diagramma E-R del database utilizzato}}
 \end{figure}
+
+\pagebreak
 
 \hypertarget{creazione-del-database-in-mysqlworkbench}{%
 \paragraph{Creazione del database in
@@ -124,8 +130,10 @@ tutte le categorie e quindi non c'è motivo di tenere traccia di chi crea
 una categoria o di dare visibilità ad alcune categorie a solo alcuni
 utenti.
 
+\pagebreak
+
 \hypertarget{analisi-dei-requisiti-dellapplicazione}{%
-\paragraph{Analisi dei requisiti
+\subsubsection{Analisi dei requisiti
 dell'applicazione}\label{analisi-dei-requisiti-dellapplicazione}}
 
 Un'applicazione permette all'utente (ad esempio il responsabile dei
@@ -177,20 +185,24 @@ View components & Events & Action \\
 \bottomrule()
 \end{longtable}
 
+\pagebreak
+
 \hypertarget{design-dellapplicazione}{%
-\paragraph{Design dell'applicazione}\label{design-dellapplicazione}}
+\subsubsection{Design dell'applicazione}\label{design-dellapplicazione}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/IFML - login.png}
+\includegraphics{../../../../_resources/IFML - login-18.png}
 \caption{\emph{Diagramma IFML del login.}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/IFML - v.0.1.jpg}
+\includegraphics{../../../../_resources/IFML - v.0.1-18.jpg}
 \caption{\emph{Diagramma IFML della pagina HOME.}}
 \end{figure}
+
+\pagebreak
 
 \hypertarget{componenti}{%
 \paragraph{Componenti}\label{componenti}}
@@ -287,64 +299,79 @@ View components & Events & Action \\
   \end{itemize}
 \end{itemize}
 
-\hypertarget{sequence-diagrams}{%
-\subsubsection{\texorpdfstring{\emph{Sequence
-Diagrams}}{Sequence Diagrams}}\label{sequence-diagrams}}
+\pagebreak
 
-\hypertarget{evento-login}{%
-\paragraph{Evento Login}\label{evento-login}}
+\hypertarget{sequence-diagrams-evento-login}{%
+\subsubsection{\texorpdfstring{\emph{Sequence Diagrams}: Evento
+Login}{Sequence Diagrams: Evento Login}}\label{sequence-diagrams-evento-login}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Event_Login.png}
+\includegraphics{../../../../_resources/Event_Login-18.png}
 \caption{\emph{Sequence diagram dell'evento Login.}}
 \end{figure}
 
-\hypertarget{evento-gotohome}{%
-\paragraph{Evento GoToHome}\label{evento-gotohome}}
+\pagebreak
+
+\hypertarget{sequence-diagrams-evento-gotohome}{%
+\subsubsection{\texorpdfstring{\emph{Sequence Diagrams}: Evento
+GoToHome}{Sequence Diagrams: Evento GoToHome}}\label{sequence-diagrams-evento-gotohome}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Event_GoToHome.png}
+\includegraphics{../../../../_resources/Event_GoToHome-18.png}
 \caption{\emph{Sequence diagram dell'evento GoToHome.}}
 \end{figure}
 
-\hypertarget{evento-createcategory}{%
-\paragraph{Evento CreateCategory}\label{evento-createcategory}}
+\pagebreak
+
+\hypertarget{sequence-diagrams-evento-createcategory}{%
+\subsubsection{\texorpdfstring{\emph{Sequence Diagrams}: Evento
+CreateCategory}{Sequence Diagrams: Evento CreateCategory}}\label{sequence-diagrams-evento-createcategory}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Event_CreateCategory.png}
+\includegraphics{../../../../_resources/Event_CreateCategory-18.png}
 \caption{\emph{Sequence diagram dell'evento CreateCategory.}}
 \end{figure}
 
-\hypertarget{evento-copycategory}{%
-\paragraph{Evento CopyCategory}\label{evento-copycategory}}
+\pagebreak
+
+\hypertarget{sequence-diagrams-evento-copycategory}{%
+\subsubsection{\texorpdfstring{\emph{Sequence Diagrams}: Evento
+CopyCategory}{Sequence Diagrams: Evento CopyCategory}}\label{sequence-diagrams-evento-copycategory}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Event_CopyCategory.png}
+\includegraphics{../../../../_resources/Event_CopyCategory-18.png}
 \caption{\emph{Sequence diagram dell'evento CopyCategory.}}
 \end{figure}
 
-\hypertarget{evento-insertcopiedcategory}{%
-\paragraph{Evento
-InsertCopiedCategory}\label{evento-insertcopiedcategory}}
+\pagebreak
+
+\hypertarget{sequence-diagrams-evento-insertcopiedcategory}{%
+\subsubsection{\texorpdfstring{\emph{Sequence Diagrams}: Evento
+InsertCopiedCategory}{Sequence Diagrams: Evento InsertCopiedCategory}}\label{sequence-diagrams-evento-insertcopiedcategory}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Event_InsertCopiedCategory.png}
+\includegraphics{../../../../_resources/Event_InsertCopiedCategory-18.png}
 \caption{\emph{Sequence diagram dell'evento InsertCopiedCategory.}}
 \end{figure}
 
-\hypertarget{evento-logout}{%
-\paragraph{Evento Logout}\label{evento-logout}}
+\pagebreak
+
+\hypertarget{sequence-diagrams-evento-logout}{%
+\subsubsection{\texorpdfstring{\emph{Sequence Diagrams}: Evento
+Logout}{Sequence Diagrams: Evento Logout}}\label{sequence-diagrams-evento-logout}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Event_Logout.png}
+\includegraphics{../../../../_resources/Event_Logout-18.png}
 \caption{\emph{Sequence diagram dell'evento Logout.}}
 \end{figure}
+
+\pagebreak
 
 \hypertarget{rich-internet-application}{%
 \subsection{\texorpdfstring{\emph{Rich Internet
@@ -383,47 +410,54 @@ le specifiche precedenti come segue:
   categoria.
 \end{itemize}
 
-\hypertarget{analisi-della-specifica-1}{%
-\subsubsection{Analisi della
-specifica}\label{analisi-della-specifica-1}}
+\pagebreak
 
 \hypertarget{design-dellapplicazione-1}{%
-\paragraph{Design dell'applicazione}\label{design-dellapplicazione-1}}
+\subsubsection{Design
+dell'applicazione}\label{design-dellapplicazione-1}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/PHOTO-2023-06-25-19-11-05.jpg}
+\includegraphics{../../../../_resources/PHOTO-2023-06-25-19-11-05-18.jpg}
 \caption{\emph{Diagramma IFML della pagina HOME - versione RIA.}}
 \end{figure}
 
+\pagebreak
+
 \hypertarget{eventi-ed-azioni}{%
-\paragraph{Eventi ed Azioni}\label{eventi-ed-azioni}}
+\subsubsection{Eventi ed Azioni}\label{eventi-ed-azioni}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Screenshot 2023-06-27 alle 00.20.30.png}
+\includegraphics{../../../../_resources/Screenshot 2023-06-27 alle 00.20.30-18.png}
 \caption{\emph{Tabella degli Eventi e delle Azioni.}}
 \end{figure}
 
+\pagebreak
+
 \hypertarget{controller---event-handler}{%
-\paragraph{\texorpdfstring{Controller - \emph{Event
+\subsubsection{\texorpdfstring{Controller - \emph{Event
 Handler}}{Controller - Event Handler}}\label{controller---event-handler}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Screenshot 2023-06-27 alle 00.18.00.png}
+\includegraphics{../../../../_resources/Screenshot 2023-06-27 alle 00.18.00-18.png}
 \caption{\emph{Tabella del Controller - Event Handler.}}
 \end{figure}
 
+\pagebreak
+
 \hypertarget{event-e-view-dynamics}{%
-\paragraph{\texorpdfstring{\emph{Event} e \emph{View
+\subsubsection{\texorpdfstring{\emph{Event} e \emph{View
 Dynamics}}{Event e View Dynamics}}\label{event-e-view-dynamics}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Screenshot 2023-06-27 alle 00.24.23.png}
+\includegraphics{../../../../_resources/Screenshot 2023-06-27 alle 00.24.23-18.png}
 \caption{\emph{Event \& View Dynamics.}}
 \end{figure}
+
+\pagebreak
 
 \hypertarget{dao-e-model-objects---server-side}{%
 \paragraph{\texorpdfstring{DAO e \emph{Model Objects} - server
@@ -509,14 +543,17 @@ side}{DAO e Model Objects - server side}}\label{dao-e-model-objects---server-sid
   \end{itemize}
 \end{itemize}
 
+\pagebreak
+
 \hypertarget{view-e-view-components---client-side}{%
-\paragraph{\texorpdfstring{\emph{View} e \emph{View Components} - client
+\subsubsection{\texorpdfstring{\emph{View} e \emph{View Components} -
+client
 side}{View e View Components - client side}}\label{view-e-view-components---client-side}}
 
 TODO (???)
 
-\hypertarget{sequence-diagrams-1}{%
-\paragraph{\texorpdfstring{\emph{Sequence
-Diagrams}}{Sequence Diagrams}}\label{sequence-diagrams-1}}
+\hypertarget{sequence-diagrams}{%
+\subsubsection{\texorpdfstring{\emph{Sequence
+Diagrams}:}{Sequence Diagrams:}}\label{sequence-diagrams}}
 
 TODO
