--- a/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
+++ b/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
@@ -7,7 +7,7 @@ Progetto}\label{tecnologie-informatiche-per-il-web---documentazione-progetto}}
 \hypertarget{introduzione}{%
 \subsection{Introduzione}\label{introduzione}}
 
-Documentazione relativa al progetto finale del corso
+Documentazione relativa al progetto ilnale del corso
 ``\textbf{Tecnologie Informatiche per il Web}'', professore Fraternali
 Piero.
 
@@ -198,6 +198,8 @@ View components & Events & Action \\
 \caption{\emph{Diagramma IFML della pagina LOGIN.}}
 \end{figure}
 
+\pagebreak
+
 \begin{figure}
 \centering
 \includegraphics{../../../../_resources/IFML - HOME - pure-html.jpeg}
@@ -280,7 +282,7 @@ View components & Events & Action \\
     InsertCopiedCategory
   \end{itemize}
 \item
-  FIlters:
+  Filters:
 
   \begin{itemize}
   \tightlist
