adjustments on documentation
Co-Authored-By: Samdec01 <114877734+Samdec01@users.noreply.github.com>

--- a/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
+++ b/project-documents/tex-sources/Documentazione - De Ciechi - Deidier - Gruppo 9.tex
@@ -445,7 +445,7 @@ dell'applicazione}\label{design-dellapplicazione-1}}
 
 \begin{figure}
 \centering
-\includegraphics{../../../../_resources/Screenshot 2023-06-27 alle 00.20.30.png}
+\includegraphics{../../../../_resources/msg23070224-196602.jpg}
 \caption{\emph{Tabella degli Eventi e delle Azioni.}}
 \end{figure}
 
@@ -592,7 +592,7 @@ side}{View e View Components - client side}}\label{view-e-view-components---clie
     categorie nel database.
   \item
     \emph{orderList()} \(\implies\) riordina per la visualizzazione una
-    lista di cateogire non ordinata.
+    lista di categorie non ordinata.
   \item
     \emph{createCategoriesHTML()} \(\implies\) crea gli elementi HTML
     per la visualizzazione delle categorie, registra tutti gli eventi
